# racing-coach

./: .env.development.example  .env.production.example  .gitignore  CLAUDE.md  MIGRATION_SPEC.md  README.md  README_old.md  TESTING_CODEBASE_ANALYSIS.md  TESTING_RECOMMENDATIONS.md  docker-compose.prod.yaml  docker-compose.yaml  justfile  notes.md  pyproject.toml  racing-coach.code-workspace
apps/client-rs/: Cargo.toml  EVENT_BUS_DESIGN.md  moon.yml  openapi.json
apps/client-rs/benches/: event_throughput.rs
apps/client-rs/src/: app.rs  config.rs  events.rs  lib.rs  main.rs  pos_service.rs  telem.rs
apps/client-rs/src/api/: client.rs  mod.rs  models.rs
apps/client-rs/src/events/: bus.rs  error.rs  handler.rs  mod.rs  payloads.rs  types.rs
apps/client-rs/src/events/handlers/: counter.rs  lap.rs  log.rs
apps/client-rs/src/handlers/: counter.rs  lap.rs  lap_upload.rs  log.rs  metrics.rs  metrics_upload.rs  mod.rs
apps/client-rs/src/pitwall_ext/: accelerated_connection.rs  accelerated_provider.rs  mod.rs
apps/client-rs/src/telemetry/: collector.rs  frame.rs  mod.rs  source.rs
apps/client-rs/tests/: api_client_tests.rs  api_models_tests.rs  config_tests.rs  event_bus_tests.rs  events_unit_tests.rs  lap_handler_tests.rs  metrics_handler_tests.rs  telemetry_source_tests.rs  upload_handler_tests.rs
apps/racing-coach-client/: .env.example  moon.yml  pyproject.toml
apps/racing-coach-client/src/racing_coach_client/: app.py  auth.py  config.py  logging_config.py  server.py
apps/racing-coach-client/src/racing_coach_client/collectors/: __init__.py  connection.py  factory.py  iracing.py
apps/racing-coach-client/src/racing_coach_client/gui/: __init__.py  app.py  bridge.py  main_window.py  system_tray.py
apps/racing-coach-client/src/racing_coach_client/handlers/: __init__.py  lap_handler.py  lap_upload_handler.py  log_handler.py  metrics_handler.py  metrics_upload_handler.py
apps/racing-coach-client/src/racing_coach_client/server_api/: client.py
apps/racing-coach-client/src/racing_coach_client/services/: __init__.py  track_service.py
apps/racing-coach-client/tests/: README.md  conftest.py  factories.py  test_integration.py  test_load_pipeline.py
apps/racing-coach-client/tests/collectors/: test_connection.py  test_iracing.py
apps/racing-coach-client/tests/collectors/sources/: test_replay.py
apps/racing-coach-client/tests/handlers/: test_lap_handler.py  test_log_handler.py
apps/racing-coach-server/: .dockerignore  Dockerfile  README.md  alembic.ini  moon.yml  pyproject.toml
apps/racing-coach-server/migrations/: env.py
apps/racing-coach-server/migrations/versions/: 001_initial_schema_with_timescaledb.py  002_add_lap_metrics_tables.py  003_add_auth_tables.py  004_add_track_boundary_table.py  005_add_is_admin_to_user.py  006_add_track_length_to_boundary.py  007_add_corner_segment_table.py  008_add_waitlist_table.py
apps/racing-coach-server/src/racing_coach_server/: __init__.py  api.py  app.py  cli.py  config.py  dependencies.py  exceptions.py  logging.py  main.py
apps/racing-coach-server/src/racing_coach_server/api/: router.py
apps/racing-coach-server/src/racing_coach_server/auth/: __init__.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
apps/racing-coach-server/src/racing_coach_server/core_test/: router.py
apps/racing-coach-server/src/racing_coach_server/database/: __init__.py  base.py  database.py  dependencies.py  engine.py  init_db.py  mixins.py  models.py
apps/racing-coach-server/src/racing_coach_server/health/: router.py  schemas.py
apps/racing-coach-server/src/racing_coach_server/metrics/: __init__.py  comparison_schemas.py  comparison_service.py  (+4 more)
apps/racing-coach-server/tests/: __init__.py  conftest.py  factories.py  polyfactories.py
apps/racing-coach-server/tests/integration/: __init__.py  test_api.py  test_auth_api.py  test_metrics_api.py
apps/racing-coach-server/tests/unit/: __init__.py
libs/pitwall/: Cargo.toml  moon.yml
libs/pitwall/src/: driver.rs  lib.rs
libs/pitwall/src/connection/: live.rs  replay.rs  tests.rs
libs/pitwall/src/providers/: replay.rs
libs/racing-coach-api-client/: README.md  moon.yml  pyproject.toml
libs/racing-coach-api-client/racing_coach_server_client/: __init__.py
libs/racing-coach-api-client/racing_coach_server_client/models/: __init__.py  auth_session_info.py  auth_session_list_response.py  authorize_device_request.py  body_upload_lap.py  body_upload_lap_api_v1_telemetry_lap_post.py  body_upload_track_boundary.py  braking_metrics.py  braking_zone_comparison.py  confirm_device_authorization_response_confirmdeviceauthorization.py  corner_comparison.py  corner_metrics.py  corner_segment_bulk_request.py  corner_segment_create.py  corner_segment_list_response.py  corner_segment_response.py  device_authorization_request.py  device_authorization_response.py  device_authorization_status.py  device_token_info.py  device_token_list_response.py  device_token_request.py  device_token_response.py  health_check_response.py  lap_comparison_response.py  lap_comparison_summary.py  lap_detail_response.py  lap_metrics.py  lap_metrics_response.py  lap_summary.py  lap_telemetry.py  lap_telemetry_response.py  lap_upload_response.py  login_request.py  login_response.py  logout_response_logout.py  metrics_upload_request.py  metrics_upload_response.py  register_request.py  register_response.py  (+18 more)
libs/racing-coach-core/: .gitignore  README.md  RUST_ROADMAP.md  benchmark_rust_vs_python.py  lap_272f17e1.html  lap_f48d4ce6.html  lap_fdc14ef0.html  moon.yml  pyproject.toml
libs/racing-coach-core/rust/: Cargo.toml  README.md
libs/racing-coach-core/rust/src/: lib.rs
libs/racing-coach-core/src/racing_coach_core/: __init__.py  _rs.pyi  rust_ext.py
libs/racing-coach-core/tests/: __init__.py  conftest.py  factories.py  load_test_utils.py  test_decorators.py  test_event_bus.py  test_event_bus_load.py  test_event_types.py  test_rust_ext.py  test_session_registry.py
libs/racing-coach-core/tests/algs/: test_boundary.py  test_metrics_extraction.py  test_metrics_integration.py
(+303 files in other folders)
