[tool.poetry]
name = "racing-coach"
version = "0.1.0"
description = ""
authors = ["Sawyer <sawyerczupka@gmail.com>"]
readme = "README.md"
packages = [{ include = "racing_coach", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
pyirsdk = "^1.3.5"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"
pandas = "^2.2.3"
fastparquet = "^2024.11.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"


[tool.poetry.group.notebook.dependencies]
plotly = "^5.24.1"
ipykernel = "^6.29.5"
nbformat = "^5.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
