[project]
name = "racing-coach-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Sawyer", email = "sawyerczupka@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "pydantic-settings>=2.9.1",
    "pyirsdk>=1.3.5",
    "racing-coach-core",
    "requests>=2.32.3",
]

[tool.uv.sources]
racing-coach-core = { path = "../../libs/racing-coach-core", editable = true }

[project.scripts]
run-client = "racing_coach_client.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
