[project]
name = "racing-coach-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Sawyer", email = "sawyerczupka@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "fastapi-cli>=0.0.7",
    "pydantic-settings>=2.9.1",
    "racing-coach-core",
    "sqlalchemy[asyncio]>=2.0.40",
    "uvicorn>=0.34.0",
]

[tool.uv.sources]
racing-coach-core = { path = "../../libs/racing-coach-core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
