[project]
name = "racing-coach-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Sawyer", email = "sawyerczupka@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "plotly>=6.3.0",
    "pydantic>=2.11.2",
    "pyirsdk>=1.3.5",
    "requests>=2.32.0",
    "types-requests>=2.32.4.20250913",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [tool.isort]
# known_first_party = ["racing_coach_core"]

[tool.basedpyright]
typeCheckingMode = "strict"
pythonVersion = "3.13"
enableTypeIgnoreComments = true

[dependency-groups]
dev = ["ruff>=0.12.11"]
