[project]
name = "racing-coach-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Sawyer", email = "sawyerczupka@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "plotly>=6.3.0",
    "pydantic>=2.11.2",
    "pyirsdk>=1.3.5",
    "requests>=2.32.0",
    "types-requests>=2.32.4.20250913",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [tool.isort]
# known_first_party = ["racing_coach_core"]

[tool.basedpyright]
typeCheckingMode = "strict"
pythonVersion = "3.13"
enableTypeIgnoreComments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: Unit tests that mock external dependencies",
    "integration: Integration tests that test components together",
    "slow: Tests that take a long time to run",
]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=racing_coach_core.events",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[dependency-groups]
dev = ["ruff>=0.12.11"]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "factory-boy>=3.3.0",
    "pytest-factoryboy>=2.8.0",
    "types-factory-boy>=0.4.1",
    "pytest-randomly>=4.0.1",
]
